--- a/Agents/DoEAgent/requirements.txt
+++ b/Agents/DoEAgent/requirements.txt
@@ -1,5 +1,5 @@
-pyasyncagent==0.0.5
-git+https://github.com/cambridge-cares/TheWorldAvatar@develop#subdirectory=Agents/utils/python-utils
+git+https://github.com/cambridge-cares/TheWorldAvatar@main#subdirectory=Agents/utils/python-utils
+git+https://github.com/cambridge-cares/TheWorldAvatar@152-dev-pyderivationagent#subdirectory=JPS_BASE_LIB/python_derivation_agent
 git+https://github.com/cambridge-cares/TheWorldAvatar@134-dev-lab-equipment-digital-twin#subdirectory=Agents/utils/chemistry-and-robots
 summit
 pandas
