--- a/Agents/AgilentPostProcAgent/Dockerfile
+++ b/Agents/AgilentPostProcAgent/Dockerfile
@@ -2,8 +2,6 @@
 
 # Base image is a lightweight version of Python
 FROM python:3.7-slim-buster
-# FROM rappdw/docker-java-python:openjdk1.8.0_171-python3.6.6
-# FROM openjdk:8-jdk-slim-buster
 
 # Install required software
 RUN apt update && apt install -y git
@@ -37,7 +35,7 @@ RUN python -m pip install -r requirements.txt
 
 # Set the default working directory, then copy the Python source code into it
 WORKDIR /app
-ADD postprocagent /app/postprocagent
+ADD agilentpostprocagent /app/agilentpostprocagent
 
 # Switch to a non-root user before running the server, for security reasons
 # (See https://code.visualstudio.com/docs/containers/python-user-rights)
@@ -51,4 +49,4 @@ RUN chmod -R 755 /home/appuser
 # Start the gunicorn server on port 5000, using a Flask object called 'app' imported from the 'python_agent' module
 # Note that port 5000 is *inside the container*; this can be mapped to a port on the host when running the container on the command line or in docker-compose.yml
 USER appuser
-ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "postprocagent:create_app()"]
+ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "agilentpostprocagent:create_app()"]
