--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.common.conf
@@ -158,6 +158,21 @@ location /digital-twin/flood-map/ {
     proxy_set_header  X-Forwarded-Proto $scheme;
 }
 
+#==================== Redirects for the DOME visualisation ====================
+location = /dome/visualisation {
+    return 301 $scheme://$http_host$uri/;
+}
+
+# Main entry point for visualisation
+location /dome/visualisation {
+    proxy_pass        http://local_dome_vis/;
+    proxy_set_header  Host $host;
+    proxy_set_header  X-Real-IP $remote_addr;
+    proxy_set_header  X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header  X-Forwarded-Host $server_name;
+    proxy_set_header  X-Forwarded-Proto $scheme;
+	
+	
 #================================ Redirects for the STDC Agent =================================
 location = /stdc-agent {
     return 301 $scheme://$http_host$uri/;
