--- a/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.common.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/upstream_servers.common.conf
@@ -1,4 +1,9 @@
 # List of upstream servers that are used for all container modes
+
+upstream local_dome_vis {
+    server dome-vis:80;
+}
+
 upstream local_flood_map {
     server flood-map:80;
 }
