--- a/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
+++ b/Deploy/stacks/web/reverse_proxy/conf.d/redirects.prod.conf
@@ -36,3 +36,50 @@ location /cdn/ {
     proxy_read_timeout     300;
     send_timeout           300;
 }
+
+
+
+#======================== Redirect for credo visualisation =========================
+location = /credo/visualisation {
+    return 301 $scheme://$http_host$uri/;
+}
+location /credo/visualisation/ {
+    proxy_pass                  http://local_credo-vis/;
+    proxy_set_header            Host $http_host;
+    proxy_set_header            X-Real-IP $remote_addr;
+    proxy_set_header            X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header            X-Forwarded-Host $http_host;
+    proxy_set_header            X-Forwarded-Server $http_host;
+}
+
+#================================ Redirects for the MoDS Agent =================================
+location = /mods-agent {
+    return 301 $scheme://$http_host$uri/;
+}
+
+location /mods-agent/ {
+    proxy_pass             http://agent_mods/;
+    proxy_set_header       Host $host;
+    proxy_set_header       X-Real-IP $remote_addr;
+    proxy_set_header       X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header       X-Forwarded-Host $server_name;
+    proxy_set_header       X-Forwarded-Proto $scheme;
+}
+
+location = /mods-agent/cuds {
+    return 301 $scheme://$http_host$uri/;
+}
+
+location /mods-agent/cuds/ {
+    proxy_pass             http://agent_mods_cuds_wrapper/;
+    proxy_set_header       Host $host;
+    proxy_set_header       X-Real-IP $remote_addr;
+    proxy_set_header       X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header       X-Forwarded-Host $server_name;
+    proxy_set_header       X-Forwarded-Proto $scheme;
+
+#    proxy_connect_timeout  300;
+#    proxy_send_timeout     300;
+#    proxy_read_timeout     300;
+#    send_timeout           300;
+}
