--- a/Agents/VapourtecExecutionAgent/Dockerfile.mock
+++ b/Agents/VapourtecExecutionAgent/Dockerfile.mock
@@ -9,7 +9,7 @@ RUN apt update && apt install -y git
 # Install Java openjdk-8 to enable py4jps
 # (See https://github.com/puckel/docker-airflow/issues/182#issuecomment-594906148)
 USER root
-RUN echo "deb http://security.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list                                                   
+RUN echo "deb http://security.debian.org/debian-security stretch/updates main" >> /etc/apt/sources.list
 RUN mkdir -p /usr/share/man/man1 && \
     apt-get update -y && \
     apt-get install -y openjdk-8-jdk
@@ -49,4 +49,4 @@ RUN chmod -R 755 /home/appuser
 # Start the gunicorn server on port 5000, using a Flask object called 'app' imported from the 'python_agent' module
 # Note that port 5000 is *inside the container*; this can be mapped to a port on the host when running the container on the command line or in docker-compose.yml
 USER appuser
-ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "vtexeagent:create_app()"]
+ENTRYPOINT ["gunicorn", "--bind", "0.0.0.0:5000", "vtexeagent:create_mock_app()"]
