--- a/Deploy/stacks/dynamic/stack-manager/src/main/resources/com/cmclinnovations/services/defaults/nginx.json
+++ b/Deploy/stacks/dynamic/stack-manager/src/main/resources/com/cmclinnovations/services/defaults/nginx.json
@@ -9,6 +9,7 @@
                     "HostPort": "8080"
                 }
             ]
-        }
+        },
+        "AutoRemove": true
     }
 }
