--- a/Agents/ADMSAgent/pom.xml
+++ b/Agents/ADMSAgent/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>uk.ac.cam.cares.jps.dispersion</groupId>
-  <artifactId>JPS_DISPERSION</artifactId>
+  <groupId>uk.ac.cam.cares.jps.admsagent</groupId>
+  <artifactId>ADMSAgent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
@@ -67,7 +67,7 @@
 		<dependency>
 			<groupId>uk.ac.cam.cares.jps</groupId>
 			<artifactId>jps-base-lib</artifactId>
-			<version>1.3.0</version>
+			<version>1.9.0</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework</groupId>
