--- a/JPS_ACCESS_AGENT/docker-compose.yml
+++ b/JPS_ACCESS_AGENT/docker-compose.yml
@@ -1,18 +1,39 @@
 version: "3.8"
 
 services:
+  # access-agent
   access-agent:
-    image: access-agent:1.3.0
+    image: ghcr.io/cambridge-cares/access-agent:1.4.0-SNAPSHOT
     build: .
     container_name: access-agent
+    environment:
+        LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+        STOREROUTER_ENDPOINT: "http://blazegraph-access-agent:8080/blazegraph/namespace/kb/sparql"
     pull_policy: if_not_present
     ports:
       - "48080:8080"
-
+    networks:
+      - default
+      
+  # Blazegraph
+  blazegraph:
+    image: docker.cmclinnovations.com/blazegraph:1.0.0-SNAPSHOT
+    container_name: "blazegraph-access-agent"
+    environment:
+      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+    pull_policy: if_not_present
+    restart: unless-stopped
     volumes:
-      - external_maven_repo:/root/.m2
-
-
+      - blazegraph_data:/data
+    ports:
+      - 48081:8080
+    networks:
+      - default
+      
+# Volumes
 volumes:
-  external_maven_repo:
-    name: "external_maven_repo"      
+  blazegraph_data:
+  
+networks:
+  default:
+    name: access_agent
