--- a/Deploy/stacks/dynamic/stack-manager/src/main/resources/com/cmclinnovations/services/defaults/nginx.json
+++ b/Deploy/stacks/dynamic/stack-manager/src/main/resources/com/cmclinnovations/services/defaults/nginx.json
@@ -1,15 +1,21 @@
 {
-    "name": "nginx",
     "type": "nginx",
-    "image": "nginx:1.19.6",
-    "HostConfig": {
-        "PortBindings": {
-            "80": [
+    "ServiceSpec": {
+        "Name": "nginx",
+        "TaskTemplate": {
+            "ContainerSpec": {
+                "Image": "nginx:1.19.6"
+            }
+        },
+        "EndpointSpec": {
+            "Ports": [
                 {
-                    "HostPort": "8080"
+                    "Name": "web",
+                    "Protocol": "tcp",
+                    "TargetPort": "80",
+                    "PublishedPort": "8080"
                 }
             ]
-        },
-        "AutoRemove": true
+        }
     }
 }
