--- a/Agents/AirQualityAgent/resources/airquality.properties
+++ b/Agents/AirQualityAgent/resources/airquality.properties
@@ -5,11 +5,11 @@
 
 # URL to connect to PostgreSQL database
 # For local deployment
-db.url = jdbc:postgresql:airquality
+#db.url = jdbc:postgresql:airquality
 # For deployment in Docker with access to local Postgres
 #db.url = jdbc:postgresql://host.docker.internal:5432/airquality
 # For deployment in Docker with Postgres running in same Docker stack
-#db.url = jdbc:postgresql://postgres/airquality
+db.url = jdbc:postgresql://postgres/airquality
 
 # Username to connect to PostgreSQL database
 db.user = postgres
@@ -19,11 +19,11 @@ db.password = postgres
 
 # Full SPARQL Query and Update endpoints of triple store
 # For local deployment
-sparql.query.endpoint = http://localhost:9999/blazegraph/namespace/airquality/sparql
-sparql.update.endpoint = http://localhost:9999/blazegraph/namespace/airquality/sparql
+#sparql.query.endpoint = http://localhost:9999/blazegraph/namespace/airquality/sparql
+#sparql.update.endpoint = http://localhost:9999/blazegraph/namespace/airquality/sparql
 # For deployment in Docker with access to local Blazegraph
 #sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/airquality/sparql
 #sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/airquality/sparql
 # For deployment in Docker with Blazegraph running in same Docker stack
-#sparql.query.endpoint = http://blazegraph:9999/blazegraph/namespace/airquality/sparql
-#sparql.update.endpoint = http://blazegraph:9999/blazegraph/namespace/airquality/sparql
+sparql.query.endpoint = http://blazegraph:9999/blazegraph/namespace/airquality/sparql
+sparql.update.endpoint = http://blazegraph:9999/blazegraph/namespace/airquality/sparql
