--- a/Agents/FloodAgent/Dockerfile
+++ b/Agents/FloodAgent/Dockerfile
@@ -12,7 +12,7 @@ WORKDIR /root/.m2
 RUN sed -i "s|MASTER_PASSWORD|$(mvn --encrypt-master-password master_password)|" settings-security.xml
 RUN sed -i "s|REPO_USERNAME|$(cat ../credentials/repo_username.txt)|;s|REPO_PASSWORD|$(cat ../credentials/repo_password.txt|xargs mvn --encrypt-password)|" settings.xml
 
-# Build
+# only download dependencies
 COPY FloodAgent/pom.xml /root/pom.xml
 WORKDIR /root/
 RUN mvn clean dependency:resolve
