--- a/Agents/AirQualityAgent/resources/airquality.properties
+++ b/Agents/AirQualityAgent/resources/airquality.properties
@@ -9,12 +9,13 @@
 # For deployment in Docker with access to local Postgres
 #db.url = jdbc:postgresql://host.docker.internal:5432/airquality
 # For deployment in Docker with Postgres running in same Docker stack
-db.url = jdbc:postgresql://postgres/airquality
+# jdbc:postgresql://<PostgreSQL service name as per compose file>/airquality
+db.url = jdbc:postgresql://postgres_aq/airquality
 
-# Username to connect to PostgreSQL database
+# Username to connect to PostgreSQL database (according to Docker compose info)
 db.user = postgres
 
-# Password to connect to PostgreSQL database
+# Password to connect to PostgreSQL database (according to Docker compose info)
 db.password = postgres
 
 # Full SPARQL Query and Update endpoints of triple store
@@ -25,5 +26,6 @@ db.password = postgres
 #sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/airquality/sparql
 #sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/airquality/sparql
 # For deployment in Docker with Blazegraph running in same Docker stack
-sparql.query.endpoint = http://blazegraph:9999/blazegraph/namespace/airquality/sparql
-sparql.update.endpoint = http://blazegraph:9999/blazegraph/namespace/airquality/sparql
+# http://<Blazegraph service name as per compose file>:<internal port as per compose file>/...
+sparql.query.endpoint = http://blazegraph_aq:9999/blazegraph/namespace/airquality/sparql
+sparql.update.endpoint = http://blazegraph_aq:9999/blazegraph/namespace/airquality/sparql
