dev-flood-agent-ontoems: Update image name and environment variables for Flood Agent (as requested by Kok Foong).

--- a/Deploy/stacks/agent/docker-compose.build.yml
+++ b/Deploy/stacks/agent/docker-compose.build.yml
@@ -53,7 +53,7 @@ services:
       
   # Flood Agent
   flood-agent:
-    image: docker.cmclinnovations.com/flood-agent-${MODE}:1.0.0-SNAPSHOT
+    image: ghcr.io/cambridge-cares/river-data-updater:1.1
     build:
       context: "../../../Agents/FloodAgent"
       dockerfile: "Dockerfile"
