dev-dtvf-refactor: Update side panel to include tabs, added handling for additional file links, misc CSS changes.

--- a/Deploy/stacks/web/public-ftp/000-default.conf
+++ b/Deploy/stacks/web/public-ftp/000-default.conf
@@ -12,11 +12,9 @@
 	DocumentRoot /mount/ftp
 
     <Directory /mount/ftp>
-		Order Allow,Deny
-		Allow from all
-		AllowOverride all
 		Header set Access-Control-Allow-Origin "*"
         Options Indexes FollowSymLinks MultiViews
+        Require all granted
     </Directory>
 
     # Available loglevels: trace8, ..., trace1, debug, info, notice, warn,
