dev-MetOfficeAgent: Updated Docker compose for stack

--- a/Agents/MetOfficeAgent/resources/metoffice.properties
+++ b/Agents/MetOfficeAgent/resources/metoffice.properties
@@ -14,7 +14,7 @@ api.key = key
 # For deployment in Docker with access to local Postgres
 #db.url = jdbc:postgresql://host.docker.internal:5432/metoffice_test
 # For deployment in Docker with Postgres running in same Docker stack
-db.url = jdbc:postgresql://postgres/metoffice
+db.url = jdbc:postgresql://postgres_met/metoffice
 
 # Username to connect to PostgreSQL database
 db.user = postgres
@@ -30,5 +30,5 @@ db.password = postgres
 #sparql.query.endpoint = http://host.docker.internal:9999/blazegraph/namespace/metoffice_test/sparql
 #sparql.update.endpoint = http://host.docker.internal:9999/blazegraph/namespace/metoffice_test/sparql
 # For deployment in Docker with Blazegraph running in same Docker stack
-sparql.query.endpoint = http://blazegraph:9999/blazegraph/namespace/metoffice/sparql
-sparql.update.endpoint = http://blazegraph:9999/blazegraph/namespace/metoffice/sparql
+sparql.query.endpoint = http://blazegraph_met:9999/blazegraph/namespace/metoffice/sparql
+sparql.update.endpoint = http://blazegraph_met:9999/blazegraph/namespace/metoffice/sparql
