--- a/Agents/MetOfficeAgent/docker-compose_stack.yml
+++ b/Agents/MetOfficeAgent/docker-compose_stack.yml
@@ -8,23 +8,23 @@ services:
       context: .
       target: prod
     ports:
-      - "5000:5000"
+      - "5001:5000"
     volumes:
       # Link container output directory to local directory to access output files
       - ./output:/app/output
 
-  blazegraph:
-    container_name: "blazegraph"
+  blazegraph_met:
+    container_name: "blazegraph_met"
     # potentially different image to be used in the future
     image: docker.cmclinnovations.com/blazegraph_for_tests:1.0.0
     restart: unless-stopped
     ports:
-      - "8889:9999"
+      - "8890:9999"
     volumes:
-      - blazegraph_data:/blazegraph
+      - blazegraph_met_data:/blazegraph
 
-  postgres:
-    container_name: "postgres"
+  postgres_met:
+    container_name: "postgres_met"
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: postgres
@@ -32,12 +32,12 @@ services:
     image: postgres:13.3
     restart: unless-stopped
     ports:
-      - "7432:5432"
+      - "7433:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - postgres_met_data:/var/lib/postgresql/data
 
 volumes:
-  blazegraph_data:
-    name: "blazegraph_data"
-  postgres_data:
-    name: "postgres_data"
+  blazegraph_met_data:
+    name: "blazegraph_met_data"
+  postgres_met_data:
+    name: "postgres_met_data"
