--- a/Deploy/stacks/dynamic/stack-manager/docker-compose-debug.yml
+++ b/Deploy/stacks/dynamic/stack-manager/docker-compose-debug.yml
@@ -5,5 +5,6 @@ services:
       service: stack-manager
     environment:
       - "JAVA_OPTS=-agentlib:jdwp=transport=dt_socket,server=y,suspend=y,address=*:5005"
+      - "STACK_NAME=TEST_STACK"
     ports:
       - "5005:5005"
