--- a/Agents/VapourtecAgent/agent.vapourtec.env.example
+++ b/Agents/VapourtecAgent/agent.vapourtec.env.example
@@ -13,3 +13,5 @@ ONTOAGENT_OPERATION_HTTP_URL=
 VAPOURTEC_DIGITAL_TWIN=http://placeholder/vapourtec_digital_twin
 VAPOURTEC_STATE_PERIODIC_TIMESCALE=5
 VAPOURTEC_IP_ADDRESS=localhost
+FCEXP_FILE_CONTAINER_FOLDER=/app/vapourtec/
+REGISTER_AGENT=true
