--- a/Agents/ADMSAgent/pom.xml
+++ b/Agents/ADMSAgent/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>uk.ac.cam.cares.jps.admsagent</groupId>
-  <artifactId>ADMSAgent</artifactId>
+  <artifactId>adms-agent</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>war</packaging>
   
@@ -21,7 +21,7 @@
       <artifactId>maven-surefire-plugin</artifactId>
        <version>2.12.4</version>
        <configuration>
-       <skipTests>true</skipTests>
+<!--       <skipTests>true</skipTests>-->
        </configuration>
        </plugin>
 
@@ -193,12 +193,12 @@
 			<version>3.5.7</version>
 			<scope>test</scope>
 		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.glassfish.jersey.core/jersey-common -->
-		<!--<dependency>
-			<groupId>org.glassfish.jersey.core</groupId>
-			<artifactId>jersey-common</artifactId>
-			<version>3.1.0-M2</version>
-		</dependency>-->
+<!--        <dependency>-->
+<!--            <groupId>junit</groupId>-->
+<!--            <artifactId>junit</artifactId>-->
+<!--            <version>4.13.2</version>-->
+<!--            <scope>compile</scope>-->
+<!--        </dependency>-->
 
 	</dependencies>	
   
