dev-stack-manager: Added some temporary test code that is called at te end of the "main" method and added a very basic readme file.

--- a/Deploy/stacks/dynamic/stack-manager/docker-compose-debug.yml
+++ b/Deploy/stacks/dynamic/stack-manager/docker-compose-debug.yml
@@ -8,3 +8,9 @@ services:
       - "STACK_NAME=TEST_STACK"
     ports:
       - "5005:5005"
+    networks:
+      - stack
+
+networks:
+  stack:
+    name: TEST_STACK
