134-dev-lab-equipment-digital-twin: [VapourtecExecutionAgent] updated the design for integration test with local vapourtec execution agent variables; made necessary changes in chemistry-and-robots util package to enable agent design updates.

--- a/Agents/VapourtecExecutionAgent/agent.vtexe.env.example
+++ b/Agents/VapourtecExecutionAgent/agent.vtexe.env.example
@@ -9,3 +9,6 @@ FILE_SERVER_ENDPOINT=
 FILE_SERVER_USERNAME=
 FILE_SERVER_PASSWORD=
 ONTOAGENT_OPERATION_HTTP_URL=/Execution
+
+MAXIMUM_CONCURRENT_EXPERIMENT=1
+REGISTER_AGENT=false
