--- a/Agents/VapourtecExecutionAgent/docker-compose.deploy.yml
+++ b/Agents/VapourtecExecutionAgent/docker-compose.deploy.yml
@@ -2,9 +2,9 @@
 version: "3.8"
 
 services:
-  vt_exe_agent:
-    image: ghcr.io/cambridge-cares/vt_exe_agent:1.0.0-SNAPSHOT
-    container_name: vt_exe_agent
+  vapourtec_execution_agent:
+    image: ghcr.io/cambridge-cares/vapourtec_execution_agent:1.0.0-SNAPSHOT
+    container_name: vapourtec_execution_agent
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
     build:
@@ -12,4 +12,4 @@ services:
       dockerfile: ./Dockerfile
       labels:
         authors: "jb2197@cam.ac.uk"
-        description: "Execute experiment given the suggested conditions."
+        description: "Schedule and request execution of reaction experiment given the suggested conditions."
