134-dev-lab-equipment-digital-twin: [VapourtecAgent] added the part that loads reaction template and adds the reaction from csv file.

--- a/Agents/VapourtecAgent/docker-compose.test.yml
+++ b/Agents/VapourtecAgent/docker-compose.test.yml
@@ -2,8 +2,8 @@ version: '3.8'
 
 services:
   vapourtecagent:
-    image: vapourtecagent:1.0.0
-    container_name: vapourtecagent
+    image: ghcr.io/cambridge-cares/vapourtec_agent:1.0.0-SNAPSHOT
+    container_name: vapourtec_agent
     build:
       context: .
       dockerfile: ./Dockerfile
