--- a/Agents/VapourtecAgent/agent.vapourtec.env.example
+++ b/Agents/VapourtecAgent/agent.vapourtec.env.example
@@ -14,4 +14,7 @@ VAPOURTEC_DIGITAL_TWIN=http://placeholder/vapourtec_digital_twin
 VAPOURTEC_STATE_PERIODIC_TIMESCALE=5
 VAPOURTEC_IP_ADDRESS=localhost
 FCEXP_FILE_CONTAINER_FOLDER=/app/vapourtec
+FCEXP_FILE_HOST_FOLDER=D:\Vapourtec\FCEXP
+FCEXP_TEMPLATE_FILENAME=ReactionTemplate.fcexp
+DRY_RUN=false
 REGISTER_AGENT=true
