dev-stack-manager: Fixed the dynamic stack codes so that the tests should pass when run normally or during the building of the respective container images.

--- a/Deploy/stacks/dynamic/stack-clients/Dockerfile
+++ b/Deploy/stacks/dynamic/stack-clients/Dockerfile
@@ -33,7 +33,7 @@ WORKDIR /root/code
 COPY pom.xml ./
 COPY src ./src/
 
-RUN mvn package -DskipTests
+RUN mvn package
 
 #==================================================================================================
 
