--- a/Deploy/stacks/dynamic/stack-manager/Dockerfile
+++ b/Deploy/stacks/dynamic/stack-manager/Dockerfile
@@ -33,7 +33,7 @@ WORKDIR /root/code
 COPY pom.xml ./
 COPY src ./src/
 
-RUN mvn package -DskipTests
+RUN mvn package
 
 #==================================================================================================
 
