134-dev-lab-equipment-digital-twin: [VapourtecExecutionAgent/VapourtecAgent/AgilentAgent] added dockerised integration test to let the vapourtec execution agent to schedule mock experiments that executed by vapourtec agent and agilent agent.

--- a/Agents/VapourtecExecutionAgent/requirements.txt
+++ b/Agents/VapourtecExecutionAgent/requirements.txt
@@ -3,6 +3,7 @@ git+https://github.com/cambridge-cares/TheWorldAvatar@134-dev-lab-equipment-digi
 pyderivationagent
 pandas
 pydantic
+xlwt
 testcontainers
 pytest
 pytest-docker-compose
