--- a/Agents/VapourtecExecutionAgent/docker-compose.test.yml
+++ b/Agents/VapourtecExecutionAgent/docker-compose.test.yml
@@ -31,19 +31,49 @@ services:
     secrets:
       - blazegraph_password
 
-  # # File server
-  # fileserver:
-  #   image: docker.cmclinnovations.com/fileserver:1.1.0-SNAPSHOT
-  #   container_name: "fileserver_test"
-  #   ports:
-  #     - 48086:8080
-  #   # Add secret to set BASIC authentication password
-  #   secrets:
-  #     - file_server_password
+  # File server
+  fileserver:
+    image: docker.cmclinnovations.com/fileserver:1.1.0-SNAPSHOT
+    container_name: "fileserver_test"
+    ports:
+      - 48086:8080
+    # Add secret to set BASIC authentication password
+    secrets:
+      - file_server_password
+
+  # VapourtecAgent for three-agent integration test
+  vapourtec_agent:
+    image: ghcr.io/cambridge-cares/vapourtec_agent:1.0.0-SNAPSHOT
+    container_name: vapourtec_agent
+    environment:
+      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+    extra_hosts: # NOTE this ensures FlowCommander to be reachable via "localhost"
+      - localhost:host-gateway
+    env_file:
+      - ./vtexeagent/tests/env_files/agent.vapourtec.env.test
+    volumes:
+      - type: bind
+        source: ./vtexeagent/tests/_for_docker_integration_test_vapourtec
+        target: /app/vapourtec
+
+  # AgilentAgent for three-agent integration test
+  agilentagent:
+    image: ghcr.io/cambridge-cares/agilent_agent:1.0.0-SNAPSHOT
+    container_name: agilent_agent
+    environment:
+      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+    extra_hosts:
+      - localhost:host-gateway
+    env_file:
+      - ./vtexeagent/tests/env_files/agent.agilent.env.test
+    volumes:
+      - type: bind
+        source: ./vtexeagent/tests/_for_docker_integration_test_agilent
+        target: /app/CHEM32
 
 # Secrets used to set runtime passwords
 secrets:
   blazegraph_password:
     file: vtexeagent/tests/dummy_services_secrets/blazegraph_passwd.txt
-  # file_server_password:
-  #   file: vtexeagent/tests/dummy_services_secrets/fileserver_passwd.txt
+  file_server_password:
+    file: vtexeagent/tests/dummy_services_secrets/fileserver_passwd.txt
