1361-dev-rfid-agent: uncomment @Ignore statement in RFIDAgentLauncherTest and modify example api.properties and README section for RFIDUpdateAgent due to changes in the RFIDAgent

--- a/Agents/RFIDUpdateAgent/config/api.properties
+++ b/Agents/RFIDUpdateAgent/config/api.properties
@@ -1,6 +1,6 @@
 #--RFID API properties--#
 # The default port should be 1016 but can be changed.
-path.url=http://host.docker.internal:1016/rfid-servlet
+path.url=http://host.docker.internal:1016/rfid-agent
 # Which variable to retrieve
 variable=status
 #How many variables to retrieve
