dev-stack-manager: Updated the Docker compose and VSCode files to use/work with the "docker stack deploy" command and the StackClient and DockerService classes so that all of the new entities are added to the Docker Stack.

--- a/Deploy/stacks/dynamic/stack-clients/.vscode/launch.json
+++ b/Deploy/stacks/dynamic/stack-clients/.vscode/launch.json
@@ -15,15 +15,18 @@
             "name": "Launch and attach Docker",
             "request": "attach",
             "hostName": "localhost",
-            "port": "5005",
-            "preLaunchTask": "compose-up-dev"
+            "port": "5006",
+            "preLaunchTask": "compose-deploy-dev",
+            "projectName": "stack-clients",
+            "postDebugTask": "remove-service"
         },
         {
             "type": "java",
             "name": "Attach Docker",
             "request": "attach",
             "hostName": "localhost",
-            "port": "5005"
+            "port": "5006",
+            "projectName": "stack-clients"
         }
     ]
 }
