--- a/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
+++ b/Deploy/stacks/dynamic/stack-manager/docker-compose.yml
@@ -1,6 +1,7 @@
+version: '3.8'
 services:
   stack-manager:
-    image: docker.cmclinnovations.com/stack-manager:latest
+    image: docker.cmclinnovations.com/stack-manager:1.0-SNAPSHOT
     build: .
     container_name: stack-manager
     volumes:
