dev-virtual-sensor-update: change python-service to production

--- a/JPS_VIRTUALSENSOR/docker_compose.yml
+++ b/JPS_VIRTUALSENSOR/docker_compose.yml
@@ -48,10 +48,9 @@ services:
     image: python-service
     build:
       context: ./python_service
-      target: debug
+      target: production
     ports:
       - 5000:5000
-      - 5678:5678
 
 volumes:
   external_maven_repo:
