--- a/Agents/DoEAgent/docker-compose.test.yml
+++ b/Agents/DoEAgent/docker-compose.test.yml
@@ -3,7 +3,7 @@ version: '3.8'
 services:
   doe_agent:
     image: doe_agent:1.0.0-SNAPSHOT
-    container_name: doe_agent-SNAPSHOT
+    container_name: doe_agent
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
     build:
