134-dev-lab-equipment-digital-twin: [AgilentPostProcAgent] added codes to register the OntoAgent instance of agilent postproc agent in KG at spinning up; updated dockerised test accordingly.

--- a/Agents/AgilentPostProcAgent/Dockerfile
+++ b/Agents/AgilentPostProcAgent/Dockerfile
@@ -19,7 +19,7 @@ EXPOSE 5000
 
 # Turns off buffering for easier container logging
 ENV PYTHONUNBUFFERED=1
-RUN echo ABCD
+RUN echo ABCDEggg
 # Install the required Python libraries
 COPY requirements.txt .
 RUN python -m pip install -r requirements.txt
