--- a/Agents/AgilentPostProcAgent/agent.postproc.env.example
+++ b/Agents/AgilentPostProcAgent/agent.postproc.env.example
@@ -1,4 +1,4 @@
-ONTOAGENT_SERVICE_IRI=http://www.theworldavatar.com/resource/agents/Service__PostProc#Service
+ONTOAGENT_SERVICE_IRI=http://www.theworldavatar.com/resource/agents/Service__PostProc/Service
 DERIVATION_PERIODIC_TIMESCALE=120
 DERIVATION_INSTANCE_BASE_URL=http://www.theworldavatar.com/triplestore/repository/
 SPARQL_QUERY_ENDPOINT=http://localhost:48082/blazegraph/namespace/kb/sparql
@@ -9,3 +9,5 @@ FILE_SERVER_ENDPOINT=http://localhost:48086/FileServer/
 FILE_SERVER_USERNAME=
 FILE_SERVER_PASSWORD=
 ONTOAGENT_OPERATION_HTTP_URL=/PostProc
+
+REGISTER_AGENT=false
