--- a/Agents/AgilentPostProcAgent/docker-compose.test.yml
+++ b/Agents/AgilentPostProcAgent/docker-compose.test.yml
@@ -2,7 +2,7 @@ version: "3.8"
 
 services:
   agilentpostprocagent:
-    image: agilent_postproc_agent:1.0.0-SNAPSHOT
+    image: ghcr.io/cambridge-cares/agilent_postproc_agent:1.0.0-SNAPSHOT
     container_name: agilent_postproc_agent
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
