--- a/Agents/DoEAgent/docker-compose.github.yml
+++ b/Agents/DoEAgent/docker-compose.github.yml
@@ -9,7 +9,7 @@ services:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
     build:
       context: .
-      dockerfile: ./Dockerfile.test
+      dockerfile: ./Dockerfile
       labels:
         authors: "jb2197@cam.ac.uk"
         description: "Conduct design of experiment (DoE) to suggest reaction conditions."
