--- a/Agents/DoEAgent/docker-compose.test.yml
+++ b/Agents/DoEAgent/docker-compose.test.yml
@@ -2,13 +2,13 @@ version: '3.8'
 
 services:
   doe_agent:
-    image: doe_agent:1.0.0-SNAPSHOT
+    image: ghcr.io/cambridge-cares/doe_agent:1.0.0-SNAPSHOT
     container_name: doe_agent
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
     build:
       context: .
-      dockerfile: ./Dockerfile.test
+      dockerfile: ./Dockerfile
     ports:
       - 7000:5000
     extra_hosts:
