--- a/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
+++ b/Deploy/stacks/dynamic/stack-manager/.vscode/tasks.json
@@ -6,7 +6,8 @@
         {
             "type": "shell",
             "label": "compose-build",
-            "command": "docker compose build",
+            "command": "docker compose -f docker-compose-build.yml build",
+            "group": "build",
             "presentation": {
                 "reveal": "always"
             }
@@ -14,7 +15,8 @@
         {
             "type": "shell",
             "label": "compose-push",
-            "command": "docker compose push",
+            "command": "docker compose -f docker-compose-build.yml push",
+            "group": "build",
             "presentation": {
                 "reveal": "always"
             },
