134-dev-lab-equipment-digital-twin: [AgilentAgent] modified the way in which the HPLCMethod IRI is identified - added CURRENT_HPLC_METHOD to indicate the method set for the HPLC at agilent agent deployment; modified chemistry-and-robots package accordingly when adding triples related to HPLCJob and the HPLCMethod that was used.

--- a/Agents/AgilentAgent/agent.agilent.env.example
+++ b/Agents/AgilentAgent/agent.agilent.env.example
@@ -13,5 +13,6 @@ ONTOAGENT_OPERATION_HTTP_URL=/
 HPLC_DIGITAL_TWIN=http://example.com/blazegraph/namespace/testlab/dummy_lab__CAM/HPLC_Dummy
 HPLC_REPORT_PERIODIC_TIMESCALE=5
 HPLC_REPORT_CONTAINER_DIR=/app/CHEM32/
+CURRENT_HPLC_METHOD=http://example.com/blazegraph/namespace/testlab/dummy_lab/HPLCMethod_Dummy
 HPLC_REPORT_FILE_EXTENSION=xls
 HPLC_REPORT_HOST_DIR=./folder
