160-dev-rxn-opt-goal-agent: added HPLC test reports following the latest test data; updated five-agent integration tests following the bug fixes; added some missing data related to the autosampler in the test triples; modified some test data in doe and sample rxn data to let the suggested experiment condition within the range of constraint. The local five-agent integration test is fully function now.

--- a/Agents/RxnOptGoalAgent/docker-compose.test.yml
+++ b/Agents/RxnOptGoalAgent/docker-compose.test.yml
@@ -1,17 +1,17 @@
 version: "3.8"
 
 services:
-  doe_agent:
-    image: ghcr.io/cambridge-cares/doe_agent:1.0.0-SNAPSHOT
-    container_name: doe_agent
-    environment:
-      LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
-    ports:
-      - 7000:5000
-    env_file:
-      - ./tests/env_files/agent.doe.env.test
-    extra_hosts:
-      - localhost:host-gateway
+  # doe_agent:
+  #   image: ghcr.io/cambridge-cares/doe_agent:1.0.0-SNAPSHOT
+  #   container_name: doe_agent
+  #   environment:
+  #     LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
+  #   ports:
+  #     - 7000:5000
+  #   env_file:
+  #     - ./tests/env_files/agent.doe.env.test
+  #   extra_hosts:
+  #     - localhost:host-gateway
 
   # vapourtec_execution_agent:
   #   image: ghcr.io/cambridge-cares/vapourtec_execution_agent:1.0.0-SNAPSHOT
