--- a/Agents/HPLCAgent/docker-compose.github.yml
+++ b/Agents/HPLCAgent/docker-compose.github.yml
@@ -2,9 +2,9 @@
 version: "3.8"
 
 services:
-  agilentagent:
-    image: ghcr.io/cambridge-cares/agilent_agent:1.0.0-SNAPSHOT
-    container_name: agilent_agent
+  hplc_agent:
+    image: ghcr.io/cambridge-cares/hplc_agent:1.0.0-SNAPSHOT
+    container_name: hplc_agent
     environment:
       LOG4J_FORMAT_MSG_NO_LOOKUPS: "true"
     build:
@@ -12,4 +12,4 @@ services:
       dockerfile: ./Dockerfile
       labels:
         authors: "jb2197@cam.ac.uk"
-        description: "Monitor the local report folder of Agilent HPLC and upload the new reports to knowledge graph."
+        description: "Monitor the local report folder of the configured HPLC and upload the new reports to knowledge graph."
